src/objects/State_Country__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>State Country</label>
</CustomObject>